#------------------------------------------------------------------------------#
# Distributed under the OSI-approved Apache License, Version 2.0.  See
# accompanying file Copyright.txt for details.
#------------------------------------------------------------------------------#

add_subdirectory(write)
add_subdirectory(read)
add_subdirectory(read_fileonly)
add_subdirectory(inline)
